--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,11 @@
+<div class="sidebar">
+  <div class="box">
+  </div>
+</div>
+
+<div class="content">
+    <div class="box">
+
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :wrapper => :inline ) do |f| %>
@@ -13,3 +21,6 @@
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
+
+    </div>
+</div>
