--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -15,7 +15,7 @@
 html {
   width: 100%;
   height: 100%;
-  background:#eee image-url('bg.png') bottom left repeat;
+//  background:#eee image-url('bg.png') bottom left repeat;
 }
 
 body { background:none;}
