--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -7,7 +7,7 @@
     </div>
     
     <div class="box span5">
-        <%= link_to("問題列表", new_discussion_path, :class => "btn primary")%>
+        <%= link_to("問題列表", discussions_path, :class => "btn primary")%>
     </div>
     
     <div class="box span5">
