--- a/app/views/discussions/new.html.erb
+++ b/app/views/discussions/new.html.erb
@@ -1,4 +1,4 @@
-<h3>提出一個問題</h3>
+<h3>提出問題</h3>
 <hr>
 <% if !current_user %>
 （<%= link_to "登入", Setting.domain + user_omniauth_authorize_path(:facebook) %> 會員可免填名稱、Email資料）
