--- a/app/views/discussions/new.html.erb
+++ b/app/views/discussions/new.html.erb
@@ -4,7 +4,10 @@
 （<%= link_to "登入", Setting.domain + user_omniauth_authorize_path(:facebook) %> 會員可免填名稱、Email資料）
 <br><br>
 <% end %>
-<%= simple_form_for :question, :url => questions_path , :html => { :method => :post }, :wrapper => :inline  do |f| -%>
+<%= simple_form_for @question, :url => questions_path , :html => { :method => :post }, :wrapper => :inline  do |f| -%>
+
+    <%= render "shared/error_messages", :target => @question %>
+    
     <% if !current_user %>
         <%= f.input :name %>
         <%= f.input :email %>
