--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -20,6 +20,8 @@
         <br><br>
       <% end %>
       <%= simple_form_for :comment, :url => question_comments_path(@question) , :html => { :method => :post }, :wrapper => :inline  do |f| -%>
+          <%= f.error_notification %>
+          
           <% if !current_user %>
               <%= f.input :name %>
               <%= f.input :email %>
