--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if target.errors.any? %>  
- <div class="alert-message block-message error">
+ <div class="alert-message block-message error" data-alert="alert">
    <a class="close" href="#">×</a>
    <p><strong>有 <%= target.errors.count %> 處問題導致無法送出:</strong></p>
    <ul>
