--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -16,7 +16,7 @@
   <div class="span9">
       <h3>發表回應</h3>
       <% if !current_user %>
-        （<%= link_to "登入", Setting.domain + user_omniauth_authorize_path(:facebook) %> 會員可免填名稱、Email資料）
+        （<%= link_to "登入", Setting.domain + user_omniauth_authorize_path(:facebook) %> 可免填名稱、Email資料）
         <br><br>
       <% end %>
       <%= simple_form_for @comment, :url => question_comments_path(@question) , :html => { :method => :post }, :wrapper => :inline  do |f| -%>
