--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -11,6 +11,6 @@
     </div>
     
     <div class="box span5">
-        <%= link_to("常見 FAQ", new_discussion_path, :class => "btn primary")%>
+        <%= link_to("常見 FAQ", "#", :class => "btn primary")%>
     </div>
 </div>
