--- a/app/views/discussions/index.html.erb
+++ b/app/views/discussions/index.html.erb
@@ -1,4 +1,12 @@
+
+
+<div class="right">
+    <%= link_to("新增問題", new_discussion_path, :class => "btn primary" )%>
+</div>
+
 <%= render_table(@categories, [
-  ["Title",                lambda { |category| link_to(category.name, discussion_path(category))}],
+  ["名稱",lambda { |category| link_to(category.name, discussion_path(category))}],
+  ["問題數量", lambda {|category| category.questions.count}],
+  ["最新問題", lambda {|category| category.latest_question }],
 
 ], {:class_name => "table"}) %>
