--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
               <div class="span9">
                   <%= yield %>
               </div>
-              <%= render :partial => "common/general_sidebar" %>
+              <%= yield (:sidebar) %>
+              <%# render :partial => "common/general_sidebar" %>
           </div>
       </div>
   </div>
