add temp hack to notice_message

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,10 @@
-<div class="sidebar">
+<%= content_for :sidebar do %>
+  <div id="sidebar" class="span3">
+
   <div class="box">
   </div>
-</div>
+  </div>
+<% end %>
 
 <div class="content">
     <div class="box">
