--- a/app/views/common/_user_nav.html.erb
+++ b/app/views/common/_user_nav.html.erb
@@ -1,29 +1,23 @@
 <% if current_user %>
-<ul class="nav secondary-nav" id="userbar">
-  <%# 
-    # notification_class = ["notifications"]
-    # notification_class << "unread" if current_user.notifications.unread.count > 0
-    # notification_class << "active" if ["notifications"].index(params[:controller])
-  %>
-  <%#= content_tag 'li', :class => notification_class do %>
-    <%# content_tag 'a', :href => notifications_path do %>
-      <span class="count"><%# current_user.notifications.unread.count %></span>
-    <%# end %>
-  <%# end %>
-  <li>
-    <%= link_to(current_user.login,user_path(current_user.login), :class => "dropdown-toggle")%>
+<ul class="nav pills pull-right">
+  <li class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
+      個人資料
+      <b class="caret"></b>
+    </a>
     <%= render_list :class => "dropdown-menu" do |li|
-      li << link_to(t("menu.my_home_page"), user_path(current_user.login) )
-      unless params[:controller].match(/cpanel/)
-        li << link_to(t("menu.edit_account_path"),edit_user_registration_path)
-      end
-      li << link_to(t("common.logout"), destroy_user_session_path, :method => :delete )
+        ##li << link_to('編輯個人資料', edit_panel_user_path(current_user))
+        li << link_to("登出", "/logout" )
     end %>
+
   </li>
 </ul>
+
 <% else %>
-  <%= render_list :class => "nav secondary-nav", :id => "userbar" do |li|
+
+<%= render_list :class => "nav pills pull-right" do |li|
     li << link_to( t("common.register"),new_user_registration_path)
     li << link_to( t("common.login"), new_user_session_path )
-  end %>
+end %>
+
 <% end %>
