--- a/app/views/things/index.html.erb
+++ b/app/views/things/index.html.erb
@@ -2,7 +2,10 @@
 <div><%= will_paginate(@things)%></div>
 <hr>
 
-<%= link_to("也來寫一下你的為什麼！", new_thing_path, :class => "btn btn-primary") %>
+<%= link_to("也來寫一下你的 Why！", new_thing_path, :class => "btn btn-primary") %>
+
+<br>
+<br>
 
 <table class="table table-striped table-bordered">
   <tbody>
